#ifndef I_TCP_STREAM_H
#define I_TCP_STREAM_H

#include "SocketAddress.hpp"

namespace CrossPlatformSockets {

class ITcpStream
{
public:



protected:

   virtual ~ITcpStream() = default;

};

} // namespace CrossPlatformSockets

#endif // I_TCP_STREAM_H